ADD_LIBRARY(solver_cholmod ${G2O_LIB_TYPE}
  solver_cholmod.cpp
  linear_solver_cholmod.h
)

INCLUDE_DIRECTORIES(${CHOLMOD_INCLUDE_DIR} $ENV{SUITESPARSEDIR}/SuiteSparse/SuiteSparse_config)

SET_TARGET_PROPERTIES(solver_cholmod PROPERTIES OUTPUT_NAME ${LIB_PREFIX}solver_cholmod)

message(STATUS "CHOLMOD solver - BLAS: " ${BLAS_LIBRARIES})
message(STATUS "CHOLMOD solver - LAPACK: " ${LAPACK_LIBRARIES})
message(STATUS "CHOLMOD solver - F2C: " ${F2C_LIBRARIES})

ADD_DEFINITIONS(${BLAS_DEFINITIONS} ${LAPACK_DEFINITIONS})
TARGET_LINK_LIBRARIES(solver_cholmod ${CHOLMOD_LIBRARIES} ${LAPACK_LIBRARIES} core ${BLAS_LIBRARIES} ${F2C_LIBRARIES})
if(BUILD_ANDROID)
TARGET_LINK_LIBRARIES(solver_cholmod m)
endif()
if(PROFILER_LIB)
target_link_libraries(PROFILER_LIB)
endif()

INSTALL(TARGETS solver_cholmod
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)

FILE(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")

INSTALL(FILES ${headers} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/g2o/solvers/cholmod)
